# crawl4rag

./: .dockerignore  .env.example  .gitignore  CODEBASE_ANALYSIS.md  Dockerfile  FIXES_IMPLEMENTED.md  README.md  actual_performance_optimizations.md  contextual_embeddings_final_implementation.md  crawl4rag-mcp.py  crawled_pages.sql  docker-compose.yaml  docs.md  embedding_dimension_analysis.md  implemented_optimizations.md  memory_layer.md  migrate_to_1024_dimensions.sql  performance_tuning.md  pyproject.toml  requirements.txt  test_timing_improvements.py  verify_embedding_dimensions.py
crawl4rag_mcp/: server.py
crawl4rag_mcp/db/: __init__.py  pool.py  vector.py
crawl4rag_mcp/tools/: __init__.py  crawl.py  kg.py  rag.py
knowledge_graphs/: __init__.py  test_script.py
src/: crawl4ai_mcp.py  utils.py
